<resources>
    <string name="app_name">Final Year Project</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">WtPfJeouAGoVI77Hbe45QxkEnT0sULrpmLePt3gL</string>
    <string name="back4app_client_key">cR2GxE4TaScKNLhBV3oSjNJoDHba2CcJkH8VGken</string>
    <string name="btn_signin">Sign In</string>
    <string name="txtView_signup">Are you new? Sign up here.</string>
    <string name="btn_ca">Create Account</string>
    <string name="txtView_welcome">Welcome</string>
    <string name="txtView_logout">Log Out</string>
    <string name="btn_MyDetails">My Details</string>
    <string name="btn_StartAWorkout">Start a Workout</string>
    <string name="btn_GoForARun">Go For A Run</string>
    <string name="btn_TrackProgress">Track My Progress</string>
    <string name="txtMyDetails">My Details</string>
    <string name="txtViewUsername">User Name:</string>
    <string name="txtViewGender">Gender:</string>
    <string name="txtViewAge">Age:</string>
    <string name="txtViewHeight">Height(cm):</string>
    <string name="txtViewWeight">Weight(Kg):</string>
    <string name="btn_updateDetails">Update Details</string>
    <string name="txtViewStartWorkoutHeading">Start A Workout</string>
    <string name="txtViewChooseWorkout">Please Choose a Workout Level</string>
    <string name="btn_beginner">Beginner</string>
    <string name="btn_intermediate">Intermediate</string>
    <string name="btn_advanced">Advanced</string>
    <string name="btn_Start">Start</string>
    <string name="btn_Pause">Pause</string>
    <string name="btn_NextActivity">Next Workout</string>
    <string name="title_activity_go_for_run">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_startRun">Start Run</string>
    <string name="btn_endRun">End Run</string>
    <string name="txtView_StepCount">Step Count:</string>
    <string name="btn_Start_Run">Start Run</string>
    <string name="btn_End_Run">End Run</string>
    <string name="txtView_RunTime">Time:</string>
    <string name="txtView_Distance">Distance:</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_goForRun">Start Run</string>
    <string name="btn_endYourRun">End Run</string>
    <string name="btn_RunDistance">Get Distance Run</string>
    <string name="txtView_TypeOfRun">Please select the type of run you would like</string>
    <string name="btn_outdoorRun">Outdoor Run</string>
    <string name="btn_indoorRun">Indoor Run</string>
    <string name="txtView_DisplayBegin">Beginner Workouts Leaderboard</string>
    <string name="txtViewTrackMyProgress">Track My Progress</string>
    <string name="btnBeginResults">Beginner Results</string>
    <string name="btnIntermediateResults">Intermediate Results</string>
    <string name="btnAdvancedResults">Advanced Results</string>
    <string name="btnOutdoorResults">Outdoor Run Results</string>
    <string name="btnIndoorResults">Indoor Run Results</string>
    <string name="txtViewInterLeaderboard">Intermediate Workouts Leaderboard</string>
    <string name="txtViewDisplayAdvanced">Advanced Workouts Leaderboard</string>
    <string name="btnPauseRun">Pause Run</string>
    <string name="btnResumeRun">Resume Run</string>
    <item name="startButton" type="id"/>
    <item name="stopButton" type="id"/>
    <item name="mapFragment" type="id"/>
</resources>