<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackMyProgress"
    android:background="@drawable/background2">

    <TextView
        android:id="@+id/txtViewTrackMyProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="92dp"
        android:text="@string/txtViewTrackMyProgress"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBeginnerResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBeginnerResults"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="52dp"
        android:text="@string/btnBeginResults"
        android:textColor="#000000"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnIntermediateResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTrackMyProgress" />

    <Button
        android:id="@+id/btnIntermediateResults"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="53dp"
        android:text="@string/btnIntermediateResults"
        android:textColor="#000000"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdvancedResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBeginnerResults" />

    <Button
        android:id="@+id/btnAdvancedResults"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="59dp"
        android:text="@string/btnAdvancedResults"
        android:textColor="#000000"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnOutdoorRunResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIntermediateResults" />

    <Button
        android:id="@+id/btnOutdoorRunResults"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="55dp"
        android:text="@string/btnOutdoorResults"
        android:textColor="#000000"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnIndoorRunResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdvancedResults" />

    <Button
        android:id="@+id/btnIndoorRunResults"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="86dp"
        android:text="@string/btnIndoorResults"
        android:textColor="#000000"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOutdoorRunResults" />
</androidx.constraintlayout.widget.ConstraintLayout>