<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="36dp"
        android:text="@string/txtView_welcome"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_MyDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="LogOut"
        android:text="@string/txtView_logout"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_GoForaRun"
        app:layout_constraintStart_toStartOf="@+id/textView_welcome"
        app:layout_constraintTop_toBottomOf="@+id/btn_TrackProgress" />

    <Button
        android:id="@+id/btn_MyDetails"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:text="@string/btn_MyDetails"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_StartaWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome" />

    <Button
        android:id="@+id/btn_StartaWorkout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:text="@string/btn_StartAWorkout"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_GoForaRun"
        app:layout_constraintEnd_toEndOf="@+id/btn_GoForaRun"
        app:layout_constraintStart_toStartOf="@+id/btn_GoForaRun"
        app:layout_constraintTop_toBottomOf="@+id/btn_MyDetails" />

    <Button
        android:id="@+id/btn_GoForaRun"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:text="@string/btn_GoForARun"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_TrackProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_StartaWorkout" />

    <Button
        android:id="@+id/btn_TrackProgress"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        android:text="@string/btn_TrackProgress"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_GoForaRun" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="266dp"
        android:layout_height="197dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo7" />
</androidx.constraintlayout.widget.ConstraintLayout>