<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".StartWorkout">

    <TextView
        android:id="@+id/textViewStartaWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/txtViewStartWorkoutHeading"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewChooseWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textViewChooseWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="@string/txtViewChooseWorkout"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_beginner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartaWorkout" />

    <Button
        android:id="@+id/btn_beginner"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="49dp"
        android:text="@string/btn_beginner"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_intermediate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseWorkout" />

    <Button
        android:id="@+id/btn_intermediate"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="54dp"
        android:text="@string/btn_intermediate"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_advanced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_beginner" />

    <Button
        android:id="@+id/btn_advanced"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:text="@string/btn_advanced"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_intermediate" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="158dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewStartaWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo7" />
</androidx.constraintlayout.widget.ConstraintLayout>