<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyDetails"
    android:background="@drawable/background2">

    <TextView
        android:id="@+id/textViewMyDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txtMyDetails"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/txtViewUsername"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editTextUsername"
        app:layout_constraintEnd_toStartOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:text="@string/txtViewGender"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editTextGender"
        app:layout_constraintEnd_toStartOf="@+id/editTextGender" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:text="@string/txtViewAge"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editTextAge"
        app:layout_constraintEnd_toStartOf="@+id/editTextAge" />

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewHeight"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editTextHeight"
        app:layout_constraintEnd_toEndOf="@+id/textViewAge"
        app:layout_constraintStart_toStartOf="@+id/textViewWeight" />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/txtViewWeight"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editTextWeight"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_UpdateDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:text="@string/btn_updateDetails"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewUsername"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextGender"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextHeight"
        app:layout_constraintStart_toStartOf="@+id/editTextHeight"
        app:layout_constraintTop_toBottomOf="@+id/editTextGender" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextWeight"
        app:layout_constraintStart_toStartOf="@+id/editTextWeight"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextGender"
        app:layout_constraintStart_toStartOf="@+id/editTextGender"
        app:layout_constraintTop_toBottomOf="@+id/editTextHeight" />
</androidx.constraintlayout.widget.ConstraintLayout>