<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".GoForRunMenu">

    <Button
        android:id="@+id/btn_outdoorRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:text="@string/btn_outdoorRun"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_indoorRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_TypeOfRun" />

    <Button
        android:id="@+id/btn_indoorRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="147dp"
        android:text="@string/btn_indoorRun"
        app:backgroundTint="#FFF44F"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_outdoorRun"
        app:layout_constraintTop_toBottomOf="@+id/btn_outdoorRun" />

    <TextView
        android:id="@+id/txtview_TypeOfRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/txtView_TypeOfRun"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_outdoorRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/txtview_TypeOfRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo7" />
</androidx.constraintlayout.widget.ConstraintLayout>